# mde_agent

./: .gitignore  AGENT.md  AUTONOMOUS_SKILL_AGENT_PLAN.md  CLAUDE.md  CLAUDE_CODE_REVIEW.md  CODE_REVIEW_REPORT.md  README.md  TODO_REVISIT.md  pyproject.toml
agent/: __init__.py  cli.py  config.py  types.py
agent/llm/: anthropic_client.py  base_client.py  decoder.py  gemini_client.py  prompt_builder.py  provider_router.py  structured_output.py  token_budget.py
agent/logging/: events.py  jsonl_sink.py  redaction.py  sanitizer.py  transcript.py
agent/mcp/: client.py
agent/runtime/: chat_session.py  executor.py  orchestrator.py  policies.py  retry.py  shell_linux.py  shell_windows.py  signals.py  state_machine.py
agent/security/: provenance.py  secret_filter.py
agent/skills/: disclosure.py  parser.py  registry.py  router.py
agent/storage/: run_store.py
demos/basic_demo_skills/content-summarizer/: SKILL.md
demos/basic_demo_skills/content-summarizer/references/: example.md
demos/basic_demo_skills/content-summarizer/scripts/: preview_file.sh
demos/basic_demo_skills/keyword-search-extractor/: SKILL.md
demos/basic_demo_skills/keyword-search-extractor/references/: example.md
demos/basic_demo_skills/keyword-search-extractor/scripts/: search_keyword.sh
demos/basic_demo_skills/markdown-report-drafter/: SKILL.md
demos/basic_demo_skills/markdown-report-drafter/references/: example.md
demos/basic_demo_skills/markdown-report-drafter/scripts/: report_template.md
demos/basic_demo_skills/task-checklist-builder/: SKILL.md
demos/basic_demo_skills/task-checklist-builder/references/: example.md
demos/basic_demo_skills/task-checklist-builder/scripts/: template.md
demos/basic_demo_skills/workspace-inventory/: SKILL.md
demos/basic_demo_skills/workspace-inventory/references/: example.md
demos/basic_demo_skills/workspace-inventory/scripts/: list_workspace.sh
docs/: architecture.md  configuration.md  data-models.md  decision-loop.md  getting-started.md  interactive-chat-session-plan.md  mcp-integration.md  observability.md  providers.md  skills.md  testing.md  troubleshooting.md
tests/: conftest.py  test_anthropic_client.py  test_chat_session.py  test_cli.py  test_config.py  test_decoder.py  test_disclosure.py  test_executor.py  test_logging.py  test_mcp.py  test_native_tool_use.py  test_orchestrator.py  test_parser.py  test_prompt_budget.py  test_provider_router.py  test_retry.py  test_router.py  test_transcript_logging.py
tests/fixtures/event_snapshots/: dry_run_snapshot.json
tests/fixtures/provider_responses/: anthropic_finish.json
